# quickedit

./: .gitignore  Cargo.toml  README.md  build.rs  clippy.toml
.github/workflows/: check.yml  release.yml
convert_macro/: Cargo.toml
convert_macro/src/: lib.rs
res/: blit.vsh  main.fsh  main.vsh  versions.csv
res/pack/: abstract_chest.json  black_shulker_box.json  blue_shulker_box.json  brown_shulker_box.json  chest.json  chest_blockstate.json  cyan_shulker_box.json  ender_chest.json  ender_chest_blockstate.json  gray_shulker_box.json  green_shulker_box.json  light_blue_shulker_box.json  light_gray_shulker_box.json  lime_shulker_box.json  magenta_shulker_box.json  orange_shulker_box.json  pink_shulker_box.json  purple_shulker_box.json  red_shulker_box.json  trapped_chest.json  trapped_chest_blockstate.json  white_shulker_box.json  yellow_shulker_box.json
src/: blocks.rs  debug.rs  fname.rs  geom.rs  main.rs  minecraft.rs  renderer.rs  resource_loader.rs  resources.rs  ui.rs  util.rs  world.rs  world_renderer.rs
src/convert/: data_versions.rs  mod.rs  registries.rs
src/renderer/: bakery.rs  draw.rs  liquid.rs  mod.rs  storage.rs  worker.rs
src/resources/: atlas.rs  builtin.rs  loader.rs  mod.rs  resource_packs.rs  structs.rs
src/world/: io.rs  mod.rs  palette.rs  structs.rs  versioned_io.rs  workers.rs
