[package]
name = "mcedit_rs"
description = "Minecraft world editor written in Rust"
version = "1.0.0"
authors = ["Earthcomputer <burtonjae@hotmail.co.uk>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.28.0"
winit = "0.23.0"
conrod_core = "0.76.0"
conrod_glium = "0.76.0"
conrod_winit = "0.76.0"
native-dialog = "0.6.1"
num-integer = "0.1.44"
internment = { version = "0.5.5", features = ["arc"] }
dashmap = "5.0.0"
hematite-nbt = { git = "https://github.com/PistonDevelopers/hematite_nbt", rev = "ce60b81" }
positioned-io-preview = "0.3.3"
byteorder = "1.4.3"
lazy_static = "1.4.0"
ahash = { version = "0.7.6", features = ["serde"] }
image = { version = "0.23.14", default_features = false, features = ["png"] }
home = "0.5.3"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
serde_with = "1.11.0"
sha-1 = "0.10.0"
chrono = { version = "0.4.19", features = ["serde"] }
zip = "0.5.13"
path-slash = "0.1.4"
delegate = "0.6.1"
futures-lite = "1.12.0"
async-executor = "1.4.1"
attohttpc = "0.18.0"
structopt = "0.3.25"

[build-dependencies]
winres = "0.1.12"

[package.metadata.bundle]
identifier = "net.earthcomputer.mcedit_rs"
icon = ["res/icon_16x16.png",
    "res/icon_32x32.png",
    "res/icon_128x128.png",
    "res/icon_256x256.png",
    "res/icon_16x16@2x.png",
    "res/icon_32x32@2x.png",
    "res/icon_128x128@2x.png"
]
