[package]
name = "quickedit"
description = "Minecraft world editor written in Rust"
version = "1.0.0"
authors = ["Earthcomputer <burtonjae@hotmail.co.uk>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.7.6", features = ["serde"] } # for faster hash maps
approx = "0.5.1" # for approximate float comparisons
async-executor = "1.4.1" # simple async executor
attohttpc = "0.18.0" # simple HTTP client
bimap = "0.6.2" # for utility
byteorder = "1.4.3" # for reading and writing integers
chrono = { version = "0.4.19", features = ["serde"] } # for time handling
dashmap = "5.1.0" # for concurrent hash maps
egui = { version = "0.16.1", default_features = false, features = ["single_threaded"] } # for GUI
egui_glium = { version = "0.16.0", default_features = false, features = ["clipboard", "links"] } # for GUI
flate2 = "1.0.22" # for gzip and zlib compression
flexi_logger = { version = "0.22.3", default_features = false, features = ["compress"] } # for logging
futures-lite = "1.12.0" # for basic future operations
glam = "0.20.2" # for linear algebra
glium = "0.31.0" # for OpenGL rendering
hematite-nbt = { git = "https://github.com/PistonDevelopers/hematite_nbt", rev = "ce60b81" } # for reading and writing NBT
home = "0.5.3" # for home directory
image = { version = "0.23.14", default_features = false, features = ["png"] } # for image loading
internment = { version = "0.5.5", features = ["arc", "serde"] } # for interning
lazy_static = "1.4.0" # for lazy static variables
log = "0.4.14" # for logging
log-panics = "2.0.0" # for logging
native-dialog = "0.6.1" # for native dialogs (e.g. file chooser)
num-integer = "0.1.44" # for integer traits
num-traits = "0.2.14" # for numeric traits
num_cpus = "1.13.1" # for getting number of CPUs
path-slash = "0.1.4" # for normalizing paths
positioned-io-preview = "0.3.3" # for random access file I/O
profiling = "1.0.5" # for profiling
quickedit-convert-macro = { path = 'convert_macro' } # for data conversion between Minecraft versions
rayon = "1.5.1" # for parallel operations
serde = { version = "1.0.133", features = ["derive"] } # for serialization
serde_json = "1.0.74" # for JSON serialization
serde_with = "1.11.0" # for serialization utilities
sha-1 = "0.10.0" # for SHA-1 hashing
structopt = "0.3.25" # for command line argument parsing
tracy-client = { version = "0.12.6", optional = true } # for profiling
tracy-client-sys = { version = "0.16.0", optional = true } # for profiling
winit = "0.26.1" # for window handling and event handling
zip = "0.5.13" # for reading ZIP files

[patch.crates-io]
tracy-client-sys = { git = "https://github.com/Earthcomputer/rust_tracy_client" }

[features]
debug-atlas = []
debug-chunk-deserialization = []
log-files = []
profile-with-tracy = ["tracy-client", "tracy-client-sys", "profiling/profile-with-tracy"]
release = ["log-files"]

[build-dependencies]
winres = "0.1.12"
gl_generator = "0.14.0"

[package.metadata.bundle]
identifier = "net.earthcomputer.quickedit"
icon = ["res/icon_16x16.png",
    "res/icon_32x32.png",
    "res/icon_128x128.png",
    "res/icon_256x256.png",
    "res/icon_16x16@2x.png",
    "res/icon_32x32@2x.png",
    "res/icon_128x128@2x.png"
]
